# GitSentry

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: git-analyst.md  security-reviewer.md
.claude/skills/pre-push-audit/: SKILL.md
docs/: SECURITY.md
docs/decisions/: ADR-0001-cli-architecture.md  ADR-0002-llm-integration.md
scripts/: install-hook.sh
src/gitsentry/cli/: main.py
src/gitsentry/core/: auditor.py  history.py  patterns.py  preview.py  scanner.py
src/gitsentry/llm/: client.py  skill_gen.py
src/gitsentry/utils/: github_api.py
src/gitvault/cli/: main.py
src/gitvault/core/: auditor.py  history.py  patterns.py  preview.py  scanner.py
src/gitvault/llm/: client.py  skill_gen.py
src/gitvault/utils/: git.py
tests/unit/: test_patterns.py
