[project]
name = "gitsentry"
version = "0.1.1"
description = "GitHub security audit CLI for LLM-assisted development environments"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yoonseok Jang", email = "beret21@gmail.com" }]
keywords = ["security", "github", "cli", "llm", "claude", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "PyGithub>=2.0",
    "GitPython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
gitsentry = "gitsentry.cli.main:app"

[project.urls]
Homepage = "https://github.com/beret21/GitSentry"
Repository = "https://github.com/beret21/GitSentry"
Issues = "https://github.com/beret21/GitSentry/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitsentry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
